# pyfastlz-native

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules
src/fastlz_native/: __init__.py  compress.py  decompress.py
tests/: __init__.py  test_fastlz_native.py
