[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastlz-native"
version = "0.0.1"
authors = [
  { name="Oscar Diaz", email="odiaz@ieee.org" },
]
description = "FastLZ implementation in native python3"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
